implement about.html view

--- a/about.html
+++ b/about.html
@@ -214,10 +214,10 @@
                     and python. Programming is an art in which
                     the limit is your imagination.</p>
                   <ul class="list-unstyled social-icon d-flex justify-content-center mt-3 mb-0 cyan-text">
-                    <li><a href="https://twitter.com/kodokushinku" target="_blank" class="text-reset"><i class="fab fa-twitter mx-2"></i></a></li>
-                    <li><a href="https://www.facebook.com/gerdav2926?ref=bookmarks" target="_blank" class="text-reset"><i class="fab fa-facebook-f mx-2"></i></a></li>
-                    <li><a href="https://www.instagram.com/ger_dav/" target="_blank" class="text-reset"><i class="fab fa-instagram mx-2"></i></a></li>
-                    <li><a href="https://github.com/Kodoku-Shinku" target="_blank" class="text-reset"><i class="fab fa-github mx-2"></i></a></li>
+                    <li><a href="https://twitter.com/kodokushinku" target="_blank"><i class="fab fa-twitter mx-2"></i></a></li>
+                    <li><a href="https://www.facebook.com/gerdav2926?ref=bookmarks" target="_blank"><i class="fab fa-facebook-f mx-2"></i></a></li>
+                    <li><a href="https://www.instagram.com/ger_dav/" target="_blank"><i class="fab fa-instagram mx-2"></i></a></li>
+                    <li><a href="https://github.com/Kodoku-Shinku" target="_blank"><i class="fab fa-github mx-2"></i></a></li>
                   </ul>
                 </div>
 
@@ -241,7 +241,7 @@
                     create amazing things.
                     I'm good at Unity 3D,
                     Java, Python.</p>
-                  <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 cyan-text">
+                  <ul class="list-unstyled social-icon d-flex justify-content-center mt-3 mb-0 cyan-text">
                     <li><a href="https://twitter.com/kodokushinku" target="_blank"><i class="fab fa-twitter mx-2"></i></a></li>
                     <li><a href="https://www.facebook.com/gerdav2926?ref=bookmarks" target="_blank"><i class="fab fa-facebook-f mx-2"></i></a></li>
                     <li><a href="https://www.instagram.com/ger_dav/" target="_blank"><i class="fab fa-instagram mx-2"></i></a></li>
@@ -262,10 +262,15 @@
                   <img src="/img/brand/soufun-solid-logo.png" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
                 <div class="text-center px-2">
-                  <h6 class="font-weight-bold">Kate Witson</h6>
-                  <small class="text-muted">Lead Developer</small>
-                  <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
-                  <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 cyan-text">
+                  <h6 class="font-weight-bold">Elizabeth Librado</h6>
+                  <small class="text-muted">SouFUN Co-Founder</small>
+                  <p class="mt-3 text-muted">My favorite programs are Photoshop,
+                    2D Tupi, Paintool Sai and After Effects.
+                    I love Kirby and Crash animation and games,
+                    love reading science fiction and I am in love
+                    with music in vinyl format.
+                  </p>
+                  <ul class="list-unstyled social-icon d-flex justify-content-center mt-3 mb-0 cyan-text">
                     <li><a href="https://twitter.com/kodokushinku" target="_blank"><i class="fab fa-twitter mx-2"></i></a></li>
                     <li><a href="https://www.facebook.com/gerdav2926?ref=bookmarks" target="_blank"><i class="fab fa-facebook-f mx-2"></i></a></li>
                     <li><a href="https://www.instagram.com/ger_dav/" target="_blank"><i class="fab fa-instagram mx-2"></i></a></li>
@@ -297,7 +302,7 @@
                     Unity, Blender and Substance Painter, java
                     and python. Programming is an art in which
                     the limit is your imagination.</p>
-                  <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 cyan-text">
+                  <ul class="list-unstyled social-icon d-flex justify-content-center mt-3 mb-0 cyan-text">
                     <li><a href="https://twitter.com/kodokushinku" target="_blank"><i class="fab fa-twitter mx-2"></i></a></li>
                     <li><a href="https://www.facebook.com/gerdav2926?ref=bookmarks" target="_blank"><i class="fab fa-facebook-f mx-2"></i></a></li>
                     <li><a href="https://www.instagram.com/ger_dav/" target="_blank"><i class="fab fa-instagram mx-2"></i></a></li>
@@ -325,7 +330,7 @@
                     Unity, Blender and Substance Painter, java
                     and python. Programming is an art in which
                     the limit is your imagination.</p>
-                  <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 cyan-text">
+                  <ul class="list-unstyled social-icon d-flex justify-content-center mt-3 mb-0 cyan-text">
                     <li><a href="https://twitter.com/kodokushinku" target="_blank"><i class="fab fa-twitter mx-2"></i></a></li>
                     <li><a href="https://www.facebook.com/gerdav2926?ref=bookmarks" target="_blank"><i class="fab fa-facebook-f mx-2"></i></a></li>
                     <li><a href="https://www.instagram.com/ger_dav/" target="_blank"><i class="fab fa-instagram mx-2"></i></a></li>
@@ -336,27 +341,6 @@
               </div>
               <!-- Grid column -->
 
-              <!-- Grid column -->
-              <div class="col-md-4 mb-4">
-
-                <div class="mx-auto">
-                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(4).jpg" class="img-fluid rounded mx-auto" alt="smaple image">
-                </div>
-                <div class="mini-avatar mx-auto">
-                  <img src="/img/brand/soufun-solid-logo.png" class="img-fluid rounded-circle mx-auto" alt="smaple image">
-                </div>
-                <div class="text-center px-2">
-                  <h6 class="font-weight-bold">Kate Witson</h6>
-                  <small class="text-muted">Lead Developer</small>
-                  <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
-                  <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 red-text">
-                    <li><i class="fab fa-twitter mx-2"></i></li>
-                    <li><i class="fab fa-facebook-f mx-2"></i></li>
-                    <li><i class="fab fa-instagram mx-2"></i></li>
-                  </ul>
-                </div>
-              </div>
-              <!-- Grid column -->
             </div>
             <!-- Grid row -->
 
