--- a/about.html
+++ b/about.html
@@ -283,7 +283,7 @@
             <!-- Grid row -->
 
             <!-- Grid row -->
-            <div class="row text-center dark-grey-text my-5">
+            <div class="row col-md-8 text-center dark-grey-text my-5">
 
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
@@ -295,13 +295,15 @@
                   <img src="/img/brand/soufun-solid-logo.png" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
                 <div class="text-center px-2">
-                  <h6 class="font-weight-bold">German Perez</h6>
-                  <small class="text-muted">SouFUN Co-funder</small>
-                  <p class="mt-3 text-muted">Passionate about languages ​​and also
-                    programming languages. My strengths are
-                    Unity, Blender and Substance Painter, java
-                    and python. Programming is an art in which
-                    the limit is your imagination.</p>
+                  <h6 class="font-weight-bold">Keyla Ávila</h6>
+                  <small class="text-muted">SouFUN Artist</small>
+                  <p class="mt-3 text-muted">Graphic designer and
+                    illustrator.
+                    I like to give Photoshop
+                    Illustrator, InDesign, Blender,
+                    Krita and CCS. Fascinated by
+                    Art Concep, always
+                    willing to learn.</p>
                   <ul class="list-unstyled social-icon d-flex justify-content-center mt-3 mb-0 cyan-text">
                     <li><a href="https://twitter.com/kodokushinku" target="_blank"><i class="fab fa-twitter mx-2"></i></a></li>
                     <li><a href="https://www.facebook.com/gerdav2926?ref=bookmarks" target="_blank"><i class="fab fa-facebook-f mx-2"></i></a></li>
