--- a/about.html
+++ b/about.html
@@ -157,7 +157,7 @@
       <div class="container-fluid my-5">
 
         <!--Section: Content-->
-        <section>
+        <section id="social">
           <!--Card-->
           <div class="card mb-4">
 
@@ -194,7 +194,7 @@
             <p class="lead text-center text-muted pt-2 mb-5">Enim ad minim exercitation ullamco laboris nisi ut ex aliquip.</p>
 
             <!-- Grid row -->
-            <div class="row text-center dark-grey-text my-5" id="social">
+            <div class="row text-center dark-grey-text my-5">
 
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
@@ -299,7 +299,7 @@
                   <small class="text-muted">SouFUN Artist</small>
                   <p class="mt-3 text-muted">Graphic designer and
                     illustrator.
-                    I like to give Photoshop
+                    I like to give Photoshop,
                     Illustrator, InDesign, Blender,
                     Krita and CCS. Fascinated by
                     Art Concep, always
