implement about.html view

--- a/about.html
+++ b/about.html
@@ -271,10 +271,8 @@
                     with music in vinyl format.
                   </p>
                   <ul class="list-unstyled social-icon d-flex justify-content-center mt-3 mb-0 cyan-text">
-                    <li><a href="https://twitter.com/kodokushinku" target="_blank"><i class="fab fa-twitter mx-2"></i></a></li>
-                    <li><a href="https://www.facebook.com/gerdav2926?ref=bookmarks" target="_blank"><i class="fab fa-facebook-f mx-2"></i></a></li>
-                    <li><a href="https://www.instagram.com/ger_dav/" target="_blank"><i class="fab fa-instagram mx-2"></i></a></li>
-                    <li><a href="https://github.com/Kodoku-Shinku" target="_blank"><i class="fab fa-github mx-2"></i></a></li>
+                    <li><a href="https://www.instagram.com/ellisroots/" target="_blank"><i class="fab fa-instagram mx-2">ellisroots</i></a></li>
+                    <li><a href="https://www.instagram.com/ilaxolotl/" target="_blank"><i class="fab fa-instagram mx-2">ilaxolotl</i></a></li>
                   </ul>
                 </div>
               </div>
@@ -305,10 +303,7 @@
                     Art Concep, always
                     willing to learn.</p>
                   <ul class="list-unstyled social-icon d-flex justify-content-center mt-3 mb-0 cyan-text">
-                    <li><a href="https://twitter.com/kodokushinku" target="_blank"><i class="fab fa-twitter mx-2"></i></a></li>
-                    <li><a href="https://www.facebook.com/gerdav2926?ref=bookmarks" target="_blank"><i class="fab fa-facebook-f mx-2"></i></a></li>
-                    <li><a href="https://www.instagram.com/ger_dav/" target="_blank"><i class="fab fa-instagram mx-2"></i></a></li>
-                    <li><a href="https://github.com/Kodoku-Shinku" target="_blank"><i class="fab fa-github mx-2"></i></a></li>
+                    <li><a href="https://www.instagram.com/pildoritakey/" target="_blank"><i class="fab fa-instagram mx-2"></i></a></li>
                   </ul>
                 </div>
 
@@ -334,10 +329,7 @@
                     of the universe, I enjoy sports, nature,
                     books and waste hours playing a good shooter.</p>
                   <ul class="list-unstyled social-icon d-flex justify-content-center mt-3 mb-0 cyan-text">
-                    <li><a href="https://twitter.com/kodokushinku" target="_blank"><i class="fab fa-twitter mx-2"></i></a></li>
-                    <li><a href="https://www.facebook.com/gerdav2926?ref=bookmarks" target="_blank"><i class="fab fa-facebook-f mx-2"></i></a></li>
-                    <li><a href="https://www.instagram.com/ger_dav/" target="_blank"><i class="fab fa-instagram mx-2"></i></a></li>
-                    <li><a href="https://github.com/Kodoku-Shinku" target="_blank"><i class="fab fa-github mx-2"></i></a></li>
+                    <li><a href="https://www.instagram.com/sarabia_design/" target="_blank"><i class="fab fa-instagram mx-2"></i></a></li>
                   </ul>
                 </div>
 
