implement about.html view

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <section class="px-md-8 mx-md-5 text-center text-lg-left black-text">
 
           <!--Grid row-->
-          <div class="row">
+          <div class="row d-flex justify-content-center">
             <!--Grid column-->
             <div class="col-md-6 mb-4 mb-md-0">
               <h3 class="font-weight-bold">We create FUN games!</h3>
@@ -170,11 +170,17 @@
             </div>
             <!--Grid column-->
 
+
+          </div>
+          <!--Grid row-->
+
+          <!--Grid row-->
+          <div class="row d-flex justify-content-center">
             <!--Grid column-->
-            <div class="col-md-6 mb-4 mb-md-0">
+            <div class="col-md-9 mb-4 mb-md-0">
               <!--Image-->
               <div class="view overlay z-depth-1-half">
-                <img src="https://mdbootstrap.com/img/Photos/Slides/img%20(70).jpg" class="img-fluid" alt="">
+                <img src="https://mdbootstrap.com/img/Photos/Slides/img%20(70).jpg" class="img-fluid" alt="photo">
                 <a class="js-scroll-trigger" href="#page-top">
                   <div class="mask rgba-white-light"></div>
                 </a>
@@ -183,6 +189,9 @@
             <!--Grid column-->
           </div>
           <!--Grid row-->
+
+
+
         </section>
         <!--Section: Content-->
       </div>
