--- a/about.html
+++ b/about.html
@@ -271,8 +271,8 @@
                     with music in vinyl format.
                   </p>
                   <ul class="list-unstyled social-icon d-flex justify-content-center mt-3 mb-0 cyan-text">
-                    <li><a href="https://www.instagram.com/ellisroots/" target="_blank"><i class="fab fa-instagram mx-2">ellisroots</i></a></li>
-                    <li><a href="https://www.instagram.com/ilaxolotl/" target="_blank"><i class="fab fa-instagram mx-2">ilaxolotl</i></a></li>
+                    <li><a href="https://www.instagram.com/ellisroots/" target="_blank"><i class="fab fa-instagram mx-2 mr-3">ellisroots</i></a></li>
+                    <li><a href="https://www.instagram.com/ilaxolotl/" target="_blank"><i class="fab fa-instagram mx-2 mr-3">ilaxolotl</i></a></li>
                   </ul>
                 </div>
               </div>
