implement about.html view

--- a/about.html
+++ b/about.html
@@ -294,10 +294,8 @@
                 </div>
                 <div class="text-center px-2">
                   <h6 class="font-weight-bold">Keyla Ávila</h6>
-                  <small class="text-muted">SouFUN Artist</small>
-                  <p class="mt-3 text-muted">Graphic designer and
-                    illustrator.
-                    I like to give Photoshop,
+                  <small class="text-muted">SouFUN Graphic designer and illustrator</small>
+                  <p class="mt-3 text-muted">I like to give Photoshop,
                     Illustrator, InDesign, Blender,
                     Krita and CCS. Fascinated by
                     Art Concep, always
@@ -321,9 +319,8 @@
                 </div>
                 <div class="text-center px-2">
                   <h6 class="font-weight-bold">Victor Sarabia</h6>
-                  <small class="text-muted">SouFUN Artist</small>
-                  <p class="mt-3 text-muted">Multimedia designer,
-                    i move better in Photoshop,
+                  <small class="text-muted">SouFUN Multimedia designer</small>
+                  <p class="mt-3 text-muted">I move better in Photoshop,
                     Illustrator and After Effects.
                     My specialty is Photo Editing. Lover
                     of the universe, I enjoy sports, nature,
