--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
         <section class="px-md-8 mx-md-5 text-center text-lg-left black-text">
 
           <!--Grid row-->
-          <div class="row d-flex justify-content-center">
+          <div class="row d-flex justify-content-center text-center">
             <!--Grid column-->
-            <div class="col-md-6 mb-4 mb-md-0">
+            <div class="col-md-9 mb-4 mb-md-0">
               <h3 class="font-weight-bold">We create FUN games!</h3>
 
               <p class="text-muted black-text">SouFUNStudio is a Mexican company that creates fun,
