--- a/about.html
+++ b/about.html
@@ -378,7 +378,7 @@
                           <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/19.jpg" alt="Team member card image">
                         </div>
                         <!-- Avatar -->
-                        <div class="avatar mx-auto white">
+                        <div class="mini-avatar mx-auto white">
                           <img src="https://mdbootstrap.com/img/Photos/Avatars/img(10).jpg" class="rounded-circle img-fluid" alt="First sample avatar image">
                         </div>
                         <!-- Content -->
