implement about.html view

--- a/about.html
+++ b/about.html
@@ -374,7 +374,7 @@
                       <!-- Front Side -->
                       <div class="flip-card-front">
                         <!-- Image -->
-                        <div class="card-up">
+                        <div class="card-up mx-auto">
                           <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/19.jpg" alt="Team member card image">
                         </div>
                         <!-- Avatar -->
@@ -382,7 +382,7 @@
                           <img src="https://mdbootstrap.com/img/Photos/Avatars/img(10).jpg" class="rounded-circle img-fluid" alt="First sample avatar image">
                         </div>
                         <!-- Content -->
-                        <div class="card-body">
+                        <div class="card-body white">
                           <h4 class="font-weight-bold mt-1 mb-3">Maria Kate</h4>
                           <p class="font-weight-bold dark-grey-text">Photographer</p>
                           <!-- Triggering button -->
