implement about.html view

--- a/about.html
+++ b/about.html
@@ -365,7 +365,7 @@
             <div class="row">
 
               <!-- Grid column -->
-              <div class="col-lg-4 col-md-12 mb-4">
+              <div class="col-md-4 mb-4">
 
                 <!-- Rotating card -->
                 <div class="card-wrapper">
@@ -444,7 +444,7 @@
               <!-- Grid column -->
 
               <!-- Grid column -->
-              <div class="col-lg-4 col-md-12 mb-4">
+              <div class="col-md-4 mb-4">
                 <!-- Rotating card -->
                 <div class="card-wrapper">
                   <div id="card-2" class="card card-rotating text-center">
@@ -518,7 +518,7 @@
               <!-- Grid column -->
 
               <!-- Grid column -->
-              <div class="col-lg-4 col-md-12 mb-4">
+              <div class="col-md-4 mb-4">
                 <!-- Rotating card -->
                 <div class="card-wrapper">
                   <div id="card-3" class="card card-rotating text-center">
