--- a/about.html
+++ b/about.html
@@ -375,7 +375,7 @@
                       <div class="flip-card-front">
                         <!-- Image -->
                         <div class="card-up mx-auto">
-                          <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/19.jpg" alt="Team member card image">
+                          <img class="card-img-top" src="/img/team/back.jpg" alt="Team member card image">
                         </div>
                         <!-- Avatar -->
                         <div class="mini-avatar mx-auto white">
