--- a/about.html
+++ b/about.html
@@ -378,7 +378,7 @@
                           <img class="img-fluid mx-auto" src="/img/team/back.jpg" alt="Team member card image">
                         </div>
                         <!-- Avatar -->
-                        <div class="mini-avatar mx-auto white">
+                        <div class="mini-avatar mx-auto white pt-0">
                           <img src="https://mdbootstrap.com/img/Photos/Avatars/img(10).jpg" class="rounded-circle img-fluid" alt="First sample avatar image">
                         </div>
                         <!-- Content -->
