implement about.html view

--- a/about.html
+++ b/about.html
@@ -372,13 +372,13 @@
                   <div class="card flip-card text-center">
                     <div class="flip-card-inner">
                       <!-- Front Side -->
-                      <div class="flip-card-front">
+                      <div class="flip-card-front white">
                         <!-- Image -->
                         <div class="card-up mx-auto">
                           <img class="img-fluid mx-auto" src="/img/team/back.jpg" alt="Team member card image">
                         </div>
                         <!-- Avatar -->
-                        <div class="mini-avatar mx-auto white pt-0">
+                        <div class="mini-avatar mx-auto white">
                           <img src="https://mdbootstrap.com/img/Photos/Avatars/img(10).jpg" class="rounded-circle img-fluid" alt="First sample avatar image">
                         </div>
                         <!-- Content -->
