--- a/about.html
+++ b/about.html
@@ -378,16 +378,16 @@
                           <img class="img-fluid mx-auto" src="/img/team/back.jpg" alt="Team member card image">
                         </div>
                         <!-- Avatar -->
-                        <div class="mini-avatar mx-auto white">
+                        <div class="mini-avatar mx-auto">
                           <img src="https://mdbootstrap.com/img/Photos/Avatars/img(10).jpg" class="rounded-circle img-fluid" alt="First sample avatar image">
                         </div>
                         <!-- Content -->
-                        <div class="card-body white">
+                        <div class="card-body">
                           <h4 class="font-weight-bold mt-1 mb-3">Maria Kate</h4>
                           <p class="font-weight-bold dark-grey-text">Photographer</p>
                           <!-- Triggering button -->
-                          <a class="rotate-btn grey-text" data-card="card-1">
-                            <i class="fas fa-redo-alt grey-text"></i> Click here to rotate</a>
+                          <a class="grey-text">
+                            <i class="fas fa-redo-alt grey-text"></i> More Info</a>
                         </div>
                       </div>
                       <!-- Front Side -->
