--- a/about.html
+++ b/about.html
@@ -369,107 +369,29 @@
 
                 <!-- Rotating card -->
                 <div class="card-wrapper">
-                  <div class="card flip-card text-center">
-                    <div class="flip-card-inner">
-                      <!-- Front Side -->
-                      <div class="flip-card-front white">
-                        <!-- Image -->
-                        <div class="card-up mx-auto">
-                          <img class="img-fluid mx-auto" src="/img/team/back.jpg" alt="Team member card image">
-                        </div>
-                        <!-- Avatar -->
-                        <div class="mini-avatar mx-auto">
-                          <img src="https://mdbootstrap.com/img/Photos/Avatars/img(10).jpg" class="rounded-circle img-fluid" alt="First sample avatar image">
-                        </div>
-                        <!-- Content -->
-                        <div class="card-body">
-                          <h4 class="font-weight-bold mt-1 mb-3">Maria Kate</h4>
-                          <p class="font-weight-bold dark-grey-text">Photographer</p>
-                          <!-- Triggering button -->
-                          <a class="grey-text">
-                            <i class="fas fa-redo-alt grey-text"></i> More Info</a>
-                        </div>
-                      </div>
-                      <!-- Front Side -->
-                      <!-- Back Side -->
-                      <div class="flip-card-back">
-                        <!-- Content -->
-                        <div class="card-body">
-                          <!-- Content -->
-                          <h4 class="font-weight-bold mt-4 mb-2">
-                            <strong>About me</strong>
-                          </h4>
-                          <hr>
-                          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime quae, dolores dicta.
-                            Blanditiis rem amet repellat, dolores nihil quae in mollitia asperiores ut rerum repellendus,
-                            voluptatum eum, officia laudantium quaerat?
-                          </p>
-                          <hr>
-                          <!-- Social Icons -->
-                          <ul class="list-inline list-unstyled">
-                            <li class="list-inline-item">
-                              <a class="p-2 fa-lg fb-ic">
-                                <i class="fab fa-facebook-f"></i>
-                              </a>
-                            </li>
-                            <li class="list-inline-item">
-                              <a class="p-2 fa-lg pin-ic">
-                                <i class="fab fa-pinterest"> </i>
-                              </a>
-                            </li>
-                            <li class="list-inline-item">
-                              <a class="p-2 fa-lg ins-ic">
-                                <i class="fab fa-instagram"> </i>
-                              </a>
-                            </li>
-                            <li class="list-inline-item">
-                              <a class="p-2 fa-lg tw-ic">
-                                <i class="fab fa-twitter"> </i>
-                              </a>
-                            </li>
-                          </ul>
-                          <!-- Triggering button -->
-                          <a class="rotate-btn grey-text" data-card="card-1">
-                            <i class="fas fa-redo-alt grey-text"></i> Click here to rotate back</a>
-                        </div>
-                      </div>
-                      <!-- Back Side -->
-                    </div>
-
-                  </div>
-                </div>
-                <!-- Rotating card -->
-
-              </div>
-              <!-- Grid column -->
-
-              <!-- Grid column -->
-              <div class="col-md-4 mb-4">
-                <!-- Rotating card -->
-                <div class="card-wrapper">
-                  <div id="card-2" class="card card-rotating text-center">
+                  <div id="card-1" class="card card-rotating text-center">
                     <!-- Front Side -->
-                    <div class="face front">
+                    <div class="face-front">
                       <!-- Image -->
-                      <div class="card-up">
-                        <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/82.jpg" alt="Team member card image">
+                      <div class="card-up mx-auto">
+                        <img class="img-fluid mx-auto" src="/img/team/back.jpg" alt="Team member card image">
                       </div>
                       <!-- Avatar -->
-                      <div class="avatar mx-auto white">
-                        <img src="https://mdbootstrap.com/img/Photos/Avatars/img(20).jpg" class="rounded-circle" alt="Second sample avatar image">
+                      <div class="mini-avatar mx-auto">
+                        <img src="https://mdbootstrap.com/img/Photos/Avatars/img(10).jpg" class="rounded-circle img-fluid" alt="First sample avatar image">
                       </div>
                       <!-- Content -->
                       <div class="card-body">
-                        <h4 class="font-weight-bold mt-1 mb-3">Anna Deynah</h4>
-                        <p class="font-weight-bold dark-grey-text">Web Designer</p>
+                        <h4 class="font-weight-bold mt-1 mb-3">Maria Kate</h4>
+                        <p class="font-weight-bold dark-grey-text">Photographer</p>
                         <!-- Triggering button -->
-                        <a class="rotate-btn grey-text" data-card="card-2">
+                        <a class="rotate-btn-to-back grey-text" data-card="card-1">
                           <i class="fas fa-redo-alt grey-text"></i> Click here to rotate</a>
                       </div>
                     </div>
                     <!-- Front Side -->
                     <!-- Back Side -->
-                    <div class="face back">
+                    <div class="face-back">
                       <!-- Content -->
                       <div class="card-body">
                         <!-- Content -->
@@ -506,7 +428,84 @@
                           </li>
                         </ul>
                         <!-- Triggering button -->
-                        <a class="rotate-btn grey-text" data-card="card-2">
+                        <a class="rotate-btn-to-front grey-text" data-card="card-1">
+                          <i class="fas fa-redo-alt grey-text"></i> Click here to rotate back</a>
+                      </div>
+                    </div>
+                    <!-- Back Side -->
+
+
+                  </div>
+                </div>
+                <!-- Rotating card -->
+
+              </div>
+              <!-- Grid column -->
+
+              <!-- Grid column -->
+              <div class="col-md-4 mb-4">
+                <!-- Rotating card -->
+                <div class="card-wrapper">
+                  <div id="card-2" class="card card-rotating text-center">
+                    <!-- Front Side -->
+                    <div class="face-front">
+                      <!-- Image -->
+                      <div class="card-up mx-auto">
+                        <img class="card-img-top img-fluid mx-auto" src="/img/team/back.jpg" alt="Team member card image">
+                      </div>
+                      <!-- Avatar -->
+                      <div class="mini-avatar mx-auto">
+                        <img src="https://mdbootstrap.com/img/Photos/Avatars/img(20).jpg" class="rounded-circle" alt="Second sample avatar image">
+                      </div>
+                      <!-- Content -->
+                      <div class="card-body">
+                        <h4 class="font-weight-bold mt-1 mb-3">Anna Deynah</h4>
+                        <p class="font-weight-bold dark-grey-text">Web Designer</p>
+                        <!-- Triggering button -->
+                        <a class="rotate-btn-to-back grey-text" data-card="card-2">
+                          <i class="fas fa-redo-alt grey-text"></i> Click here to rotate</a>
+                      </div>
+                    </div>
+                    <!-- Front Side -->
+                    <!-- Back Side -->
+                    <div class="face-back">
+                      <!-- Content -->
+                      <div class="card-body">
+                        <!-- Content -->
+                        <h4 class="font-weight-bold mt-4 mb-2">
+                          <strong>About me</strong>
+                        </h4>
+                        <hr>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime quae, dolores dicta.
+                          Blanditiis rem amet repellat, dolores nihil quae in mollitia asperiores ut rerum repellendus,
+                          voluptatum eum, officia laudantium quaerat?
+                        </p>
+                        <hr>
+                        <!-- Social Icons -->
+                        <ul class="list-inline list-unstyled">
+                          <li class="list-inline-item">
+                            <a class="p-2 fa-lg fb-ic">
+                              <i class="fab fa-facebook-f"></i>
+                            </a>
+                          </li>
+                          <li class="list-inline-item">
+                            <a class="p-2 fa-lg pin-ic">
+                              <i class="fab fa-pinterest"> </i>
+                            </a>
+                          </li>
+                          <li class="list-inline-item">
+                            <a class="p-2 fa-lg ins-ic">
+                              <i class="fab fa-instagram"> </i>
+                            </a>
+                          </li>
+                          <li class="list-inline-item">
+                            <a class="p-2 fa-lg tw-ic">
+                              <i class="fab fa-twitter"> </i>
+                            </a>
+                          </li>
+                        </ul>
+                        <!-- Triggering button -->
+                        <a class="rotate-btn-to-front grey-text" data-card="card-2">
                           <i class="fas fa-redo-alt grey-text"></i> Click here to rotate back</a>
                       </div>
                     </div>
@@ -523,13 +522,13 @@
                 <div class="card-wrapper">
                   <div id="card-3" class="card card-rotating text-center">
                     <!-- Front Side -->
-                    <div class="face front">
+                    <div class="face-front">
                       <!-- Image -->
-                      <div class="card-up">
-                        <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(14).jpg" alt="Team member card image">
+                      <div class="card-up mx-auto">
+                        <img class="card-img-top img-fluid mx-auto" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(14).jpg" alt="Team member card image">
                       </div>
                       <!-- Avatar -->
-                      <div class="avatar mx-auto white">
+                      <div class="mini-avatar mx-auto">
                         <img src="https://mdbootstrap.com/img/Photos/Avatars/img(8).jpg" class="rounded-circle img-fluid" alt="Third sample avatar image">
                       </div>
                       <!-- Content -->
@@ -537,13 +536,13 @@
                         <h4 class="font-weight-bold mt-1 mb-3">John Doe</h4>
                         <p class="font-weight-bold dark-grey-text">Front-end Developer</p>
                         <!-- Triggering button -->
-                        <a class="rotate-btn grey-text" data-card="card-3">
+                        <a class="rotate-btn-to-back grey-text" data-card="card-3">
                           <i class="fas fa-redo-alt grey-text"></i> Click here to rotate</a>
                       </div>
                     </div>
                     <!-- Front Side -->
                     <!-- Back Side -->
-                    <div class="face back">
+                    <div class="face-back">
                       <!-- Content -->
                       <div class="card-body">
                         <!-- Content -->
@@ -580,11 +579,12 @@
                           </li>
                         </ul>
                         <!-- Triggering button -->
-                        <a class="rotate-btn grey-text" data-card="card-3">
+                        <a class="rotate-btn-to-front grey-text" data-card="card-3">
                           <i class="fas fa-redo-alt grey-text"></i> Click here to rotate back</a>
                       </div>
                     </div>
                     <!-- Back Side -->
+
                   </div>
                 </div>
                 <!-- Rotating card -->
