implement about.html view

--- a/about.html
+++ b/about.html
@@ -352,7 +352,7 @@
 
 
           <!--Section: Content-->
-          <section class="text-center dark-grey-text">
+          <section class="text-center dark-grey-text" id="team">
 
             <!-- Section heading -->
             <h3 class="font-weight-bold pb-2 mb-4">Our amazing team</h3>
