--- a/about.html
+++ b/about.html
@@ -362,7 +362,7 @@
               eum porro a pariatur veniam.</p>
 
             <!-- Grid row -->
-            <div class="row">
+            <div class="row d-flex justify-content-center">
 
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
