--- a/about.html
+++ b/about.html
@@ -381,12 +381,13 @@
                         <img src="https://mdbootstrap.com/img/Photos/Avatars/img(10).jpg" class="rounded-circle img-fluid" alt="First sample avatar image">
                       </div>
                       <!-- Content -->
-                      <div class="card-body">
-                        <h4 class="font-weight-bold mt-1 mb-3">Maria Kate</h4>
-                        <p class="font-weight-bold dark-grey-text">Photographer</p>
+                      <div class="card-body mt-0">
+                        <h4 class="font-weight-bold mt-1 mb-3">German Pérez</h4>
+                        <p class="font-weight-bold dark-grey-text">SouFUN Co-Founder</p>
+                        <small class="text-muted">Unity developer</small>
                         <!-- Triggering button -->
                         <a class="rotate-btn-to-back grey-text" data-card="card-1">
-                          <i class="fas fa-redo-alt grey-text"></i> Click here to rotate</a>
+                          <i class="fas fa-redo-alt grey-text"></i> More Info</a>
                       </div>
                     </div>
                     <!-- Front Side -->
@@ -399,31 +400,31 @@
                           <strong>About me</strong>
                         </h4>
                         <hr>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime quae, dolores dicta.
-                          Blanditiis rem amet repellat, dolores nihil quae in mollitia asperiores ut rerum repellendus,
-                          voluptatum eum, officia laudantium quaerat?
+                        <p>Passionate about languages ​​and also programming languages. My strengths are
+                          Unity, Blender and Substance Painter, java and python. Programming is an art in which
+                          the limit is your imagination.
                         </p>
                         <hr>
                         <!-- Social Icons -->
                         <ul class="list-inline list-unstyled">
                           <li class="list-inline-item">
-                            <a class="p-2 fa-lg fb-ic">
+                            <a href="https://www.facebook.com/gerdav2926?ref=bookmarks" target="_blank" class="p-2 fa-lg fb-ic">
                               <i class="fab fa-facebook-f"></i>
                             </a>
                           </li>
                           <li class="list-inline-item">
-                            <a class="p-2 fa-lg pin-ic">
-                              <i class="fab fa-pinterest"> </i>
-                            </a>
-                          </li>
-                          <li class="list-inline-item">
-                            <a class="p-2 fa-lg ins-ic">
+                            <a href="https://www.instagram.com/ger_dav/" target="_blank" class="p-2 fa-lg ins-ic">
                               <i class="fab fa-instagram"> </i>
                             </a>
                           </li>
                           <li class="list-inline-item">
-                            <a class="p-2 fa-lg tw-ic">
+                            <a href="https://twitter.com/kodokushinku" target="_blank" class="p-2 fa-lg tw-ic">
                               <i class="fab fa-twitter"> </i>
+                            </a>
+                          </li>
+                          <li class="list-inline-item">
+                            <a href="https://github.com/Kodoku-Shinku" target="_blank" class="p-2 fa-lg git-ic">
+                              <i class="fab fa-github"> </i>
                             </a>
                           </li>
                         </ul>
