--- a/about.html
+++ b/about.html
@@ -378,13 +378,13 @@
                       </div>
                       <!-- Avatar -->
                       <div class="mini-avatar mx-auto">
-                        <img src="https://mdbootstrap.com/img/Photos/Avatars/img(10).jpg" class="rounded-circle img-fluid" alt="First sample avatar image">
+                        <img src="/img/team/german-perez.jpg" class="rounded-circle img-fluid" alt="photo-ger">
                       </div>
                       <!-- Content -->
-                      <div class="card-body mt-0">
+                      <div class="card-body pt-0">
                         <h4 class="font-weight-bold mt-1 mb-3">German Pérez</h4>
                         <p class="font-weight-bold dark-grey-text">SouFUN Co-Founder</p>
-                        <small class="text-muted">Unity developer</small>
+                        <br><small class="text-muted">Unity developer</small>
                         <!-- Triggering button -->
                         <a class="rotate-btn-to-back grey-text" data-card="card-1">
                           <i class="fas fa-redo-alt grey-text"></i> More Info</a>
