implement about.html view

--- a/about.html
+++ b/about.html
@@ -406,7 +406,7 @@
                         </p>
                         <hr>
                         <!-- Social Icons -->
-                        <ul class="list-inline list-unstyled">
+                        <ul class="list-inline list-unstyled text-white">
                           <li class="list-inline-item">
                             <a href="https://www.facebook.com/gerdav2926?ref=bookmarks" target="_blank" class="p-2 fa-lg fb-ic">
                               <i class="fab fa-facebook-f"></i>
@@ -430,7 +430,7 @@
                         </ul>
                         <!-- Triggering button -->
                         <a class="rotate-btn-to-front grey-text" data-card="card-1">
-                          <i class="fas fa-redo-alt grey-text"></i> Click here to rotate back</a>
+                          <i class="fas fa-redo-alt grey-text"></i>Main Info</a>
                       </div>
                     </div>
                     <!-- Back Side -->
