implement about.html view

--- a/about.html
+++ b/about.html
@@ -383,8 +383,8 @@
                       <!-- Content -->
                       <div class="card-body pt-0">
                         <h4 class="font-weight-bold mt-1 mb-3">German Pérez</h4>
-                        <p class="font-weight-bold dark-grey-text">SouFUN Co-Founder</p>
-                        <br><small class="text-muted">Unity developer</small>
+                        <h6 class="font-weight-bold dark-grey-text">SouFUN Co-Founder</h6>
+                        <p><small class="text-muted">Unity developer</small></p>
                         <!-- Triggering button -->
                         <a class="rotate-btn-to-back grey-text" data-card="card-1">
                           <i class="fas fa-redo-alt grey-text"></i> More Info</a>
@@ -408,22 +408,22 @@
                         <!-- Social Icons -->
                         <ul class="list-inline list-unstyled text-white">
                           <li class="list-inline-item">
-                            <a href="https://www.facebook.com/gerdav2926?ref=bookmarks" target="_blank" class="p-2 fa-lg fb-ic">
+                            <a href="https://www.facebook.com/gerdav2926?ref=bookmarks" target="_blank" class="p-2 fa-md fb-ic">
                               <i class="fab fa-facebook-f"></i>
                             </a>
                           </li>
                           <li class="list-inline-item">
-                            <a href="https://www.instagram.com/ger_dav/" target="_blank" class="p-2 fa-lg ins-ic">
+                            <a href="https://www.instagram.com/ger_dav/" target="_blank" class="p-2 fa-md ins-ic">
                               <i class="fab fa-instagram"> </i>
                             </a>
                           </li>
                           <li class="list-inline-item">
-                            <a href="https://twitter.com/kodokushinku" target="_blank" class="p-2 fa-lg tw-ic">
+                            <a href="https://twitter.com/kodokushinku" target="_blank" class="p-2 fa-md tw-ic">
                               <i class="fab fa-twitter"> </i>
                             </a>
                           </li>
                           <li class="list-inline-item">
-                            <a href="https://github.com/Kodoku-Shinku" target="_blank" class="p-2 fa-lg git-ic">
+                            <a href="https://github.com/Kodoku-Shinku" target="_blank" class="p-2 fa-md git-ic">
                               <i class="fab fa-github"> </i>
                             </a>
                           </li>
