--- a/about.html
+++ b/about.html
@@ -387,7 +387,7 @@
                         <p><small class="text-muted">Unity developer</small></p>
                         <!-- Triggering button -->
                         <a class="rotate-btn-to-back grey-text" data-card="card-1">
-                          <i class="fas fa-redo-alt grey-text"></i> More Info</a>
+                          <i class="fas fa-redo-alt text-white"></i> More Info</a>
                       </div>
                     </div>
                     <!-- Front Side -->
