implement about.html view

--- a/about.html
+++ b/about.html
@@ -406,24 +406,24 @@
                         </p>
                         <hr>
                         <!-- Social Icons -->
-                        <ul class="list-inline list-unstyled text-muted">
+                        <ul class="list-inline list-unstyled text-reset">
                           <li class="list-inline-item">
-                            <a href="https://www.facebook.com/gerdav2926?ref=bookmarks" target="_blank" class="p-2 fa-md fb-ic">
+                            <a href="https://www.facebook.com/gerdav2926?ref=bookmarks" target="_blank" class="p-2 fa-lg fb-ic">
                               <i class="fab fa-facebook-f"></i>
                             </a>
                           </li>
                           <li class="list-inline-item">
-                            <a href="https://www.instagram.com/ger_dav/" target="_blank" class="p-2 fa-md ins-ic">
+                            <a href="https://www.instagram.com/ger_dav/" target="_blank" class="p-2 fa-lg ins-ic">
                               <i class="fab fa-instagram"> </i>
                             </a>
                           </li>
                           <li class="list-inline-item">
-                            <a href="https://twitter.com/kodokushinku" target="_blank" class="p-2 fa-md tw-ic">
+                            <a href="https://twitter.com/kodokushinku" target="_blank" class="p-2 fa-lg tw-ic">
                               <i class="fab fa-twitter"> </i>
                             </a>
                           </li>
                           <li class="list-inline-item">
-                            <a href="https://github.com/Kodoku-Shinku" target="_blank" class="p-2 fa-md git-ic">
+                            <a href="https://github.com/Kodoku-Shinku" target="_blank" class="p-2 fa-lg git-ic">
                               <i class="fab fa-github"> </i>
                             </a>
                           </li>
