implement about.html view

--- a/about.html
+++ b/about.html
@@ -387,7 +387,7 @@
                         <p><small class="text-muted">Unity developer</small></p>
                         <!-- Triggering button -->
                         <a class="rotate-btn-to-back grey-text" data-card="card-1">
-                          <i class="fas fa-redo-alt text-white"></i> More Info</a>
+                          <i class="fas fa-redo-alt grey-text"></i> More Info</a>
                       </div>
                     </div>
                     <!-- Front Side -->
@@ -406,31 +406,31 @@
                         </p>
                         <hr>
                         <!-- Social Icons -->
-                        <ul class="list-inline list-unstyled text-reset">
+                        <ul class="list-inline list-unstyled text-white">
                           <li class="list-inline-item">
-                            <a href="https://www.facebook.com/gerdav2926?ref=bookmarks" target="_blank" class="p-2 fa-lg fb-ic">
+                            <a href="https://www.facebook.com/gerdav2926?ref=bookmarks" target="_blank" class="p-2 fa-lg fb-ic text-reset">
                               <i class="fab fa-facebook-f"></i>
                             </a>
                           </li>
                           <li class="list-inline-item">
-                            <a href="https://www.instagram.com/ger_dav/" target="_blank" class="p-2 fa-lg ins-ic">
+                            <a href="https://www.instagram.com/ger_dav/" target="_blank" class="p-2 fa-lg ins-ic text-reset">
                               <i class="fab fa-instagram"> </i>
                             </a>
                           </li>
                           <li class="list-inline-item">
-                            <a href="https://twitter.com/kodokushinku" target="_blank" class="p-2 fa-lg tw-ic">
+                            <a href="https://twitter.com/kodokushinku" target="_blank" class="p-2 fa-lg tw-ic text-reset">
                               <i class="fab fa-twitter"> </i>
                             </a>
                           </li>
                           <li class="list-inline-item">
-                            <a href="https://github.com/Kodoku-Shinku" target="_blank" class="p-2 fa-lg git-ic">
+                            <a href="https://github.com/Kodoku-Shinku" target="_blank" class="p-2 fa-lg git-ic text-reset">
                               <i class="fab fa-github"> </i>
                             </a>
                           </li>
                         </ul>
                         <!-- Triggering button -->
-                        <a class="rotate-btn-to-front grey-text" data-card="card-1">
-                          <i class="fas fa-redo-alt grey-text"></i>Main Info</a>
+                        <a class="rotate-btn-to-front text-white" data-card="card-1">
+                          <i class="fas fa-redo-alt text-white"></i>Main Info</a>
                       </div>
                     </div>
                     <!-- Back Side -->
