--- a/about.html
+++ b/about.html
@@ -387,7 +387,7 @@
                         <p><small class="text-muted">Unity developer</small></p>
                         <!-- Triggering button -->
                         <a class="rotate-btn-to-back grey-text" data-card="card-1">
-                          <i class="fas fa-redo-alt grey-text"></i> More Info</a>
+                          <i class="fas fa-redo-alt grey-text mr-2"></i>More Info</a>
                       </div>
                     </div>
                     <!-- Front Side -->
@@ -406,7 +406,7 @@
                         </p>
                         <hr>
                         <!-- Social Icons -->
-                        <ul class="list-inline list-unstyled text-white">
+                        <ul class="list-inline list-unstyled text-white social-icon">
                           <li class="list-inline-item">
                             <a href="https://www.facebook.com/gerdav2926?ref=bookmarks" target="_blank" class="p-2 fa-lg fb-ic text-reset">
                               <i class="fab fa-facebook-f"></i>
@@ -430,7 +430,7 @@
                         </ul>
                         <!-- Triggering button -->
                         <a class="rotate-btn-to-front text-white" data-card="card-1">
-                          <i class="fas fa-redo-alt text-white"></i>Main Info</a>
+                          <i class="fas fa-redo-alt text-white mr-2"></i>Main Info</a>
                       </div>
                     </div>
                     <!-- Back Side -->
