implement about.html view

--- a/about.html
+++ b/about.html
@@ -406,7 +406,7 @@
                         </p>
                         <hr>
                         <!-- Social Icons -->
-                        <ul class="list-inline list-unstyled text-white social-icon">
+                        <ul class="list-inline list-unstyled social-icon text-white">
                           <li class="list-inline-item">
                             <a href="https://www.facebook.com/gerdav2926?ref=bookmarks" target="_blank" class="p-2 fa-lg fb-ic text-reset">
                               <i class="fab fa-facebook-f"></i>
