implement about.html view

--- a/about.html
+++ b/about.html
@@ -561,12 +561,12 @@
                         <ul class="list-inline list-unstyled social-icon text-white">
                           <li class="list-inline-item">
                             <a href="https://www.instagram.com/ellisroots/" target="_blank" class="p-2 fa-lg ins-ic text-reset">
-                              <i class="fab fa-instagram mr-2">elisroots</i>
+                              <i class="fab fa-instagram mr-2"></i>elisroots
                             </a>
                           </li>
                           <li class="list-inline-item">
                             <a href="https://www.instagram.com/ilaxolotl/" target="_blank" class="p-2 fa-lg ins-ic text-reset">
-                              <i class="fab fa-instagram mr-2">ilaxolotl</i>
+                              <i class="fab fa-instagram mr-2"></i>ilaxolotl
                             </a>
                           </li>
                         </ul>
@@ -629,7 +629,7 @@
                         <ul class="list-inline list-unstyled social-icon text-white">
                           <li class="list-inline-item">
                             <a href="https://www.instagram.com/pildoritakey/" target="_blank" class="p-2 fa-lg ins-ic text-reset">
-                              <i class="fab fa-instagram mr-2">elisroots</i>
+                              <i class="fab fa-instagram mr-2"></i>pildoritakey
                             </a>
                           </li>
                         </ul>
@@ -689,7 +689,7 @@
                         <ul class="list-inline list-unstyled social-icon text-white">
                           <li class="list-inline-item">
                             <a href="https://www.instagram.com/sarabia_design/" target="_blank" class="p-2 fa-lg ins-ic text-reset">
-                              <i class="fab fa-instagram mr-2"></i>
+                              <i class="fab fa-instagram mr-2"></i>sarabia_design
                             </a>
                           </li>
                         </ul>
