implement about.html view

--- a/about.html
+++ b/about.html
@@ -186,10 +186,18 @@
             </div>
             <!--Grid row-->
 
-            <!-- Section heading -->
-            <h3 class="font-weight-bold pb-2 mb-4">Our team</h3>
-            <!-- Section description -->
-            <p class="text-muted w-responsive mx-auto mb-5">knows a little more about us, what we like to do and what we do.</p>
+            <!--Grid row-->
+            <div class="row d-flex justify-content-center">
+              <!--Grid column-->
+              <div class="col-md-9 p-5">
+                <!-- Section heading -->
+                <h3 class="font-weight-bold text-center text-dark pb-2 mb-4">Our team</h3>
+                <!-- Section description -->
+                <p class="text-muted w-responsive dark-grey-text mx-auto mb-5">knows a little more about us, what we like to do and what we do.</p>
+              </div>
+              <!--Grid column-->
+            </div>
+            <!--Grid row-->
 
           </div>
           <!--Card-->
