implement about.html view

--- a/about.html
+++ b/about.html
@@ -189,9 +189,9 @@
             <!--Grid row-->
             <div class="row d-flex justify-content-center">
               <!--Grid column-->
-              <div class="col-md-9 p-5">
+              <div class="col-md-9 p-5 text-center">
                 <!-- Section heading -->
-                <h3 class="font-weight-bold text-center text-dark pb-2 mb-4">Our team</h3>
+                <h3 class="font-weight-bold text-dark pb-2 mb-4">Our team</h3>
                 <!-- Section description -->
                 <p class="text-muted w-responsive dark-grey-text mx-auto mb-5">knows a little more about us, what we like to do and what we do.</p>
               </div>
