implement about.html view

--- a/about.html
+++ b/about.html
@@ -191,9 +191,9 @@
               <!--Grid column-->
               <div class="col-md-9 p-5 text-center">
                 <!-- Section heading -->
-                <h3 class="font-weight-bold text-dark pb-2 mb-4">Our team</h3>
+                <h2 class="text-dark pb-2 mb-4">Our team</h2>
                 <!-- Section description -->
-                <p class="text-muted w-responsive dark-grey-text mx-auto mb-5">knows a little more about us, what we like to do and what we do.</p>
+                <p class="lead w-responsive dark-grey-text mx-auto mb-5">Know a little more about us, what we like to do and what we do.</p>
               </div>
               <!--Grid column-->
             </div>
