implement about.html view

--- a/about.html
+++ b/about.html
@@ -157,7 +157,7 @@
       <div class="container-fluid my-5">
 
         <!--Section: Content-->
-        <section id="social">
+        <section id="social" class="elegant-color-dark">
           <!--Card-->
           <div class="card mb-4">
 
@@ -165,8 +165,8 @@
             <div class="row d-flex justify-content-center">
               <!--Device column-->
               <div class="col-md-9 pt-5">
-                <h2 class="text-center text-dark mb-4 pb-2">Mission</h2>
-                <p class="lead text-center dark-grey-text w-responsive mx-auto mb-5">Create fun, high-quality video games to grow the industry in Mexico;
+                <h2 class="text-center text-white mb-4 pb-2">Mission</h2>
+                <p class="lead text-center text-white w-responsive mx-auto mb-5">Create fun, high-quality video games to grow the industry in Mexico;
                   willing to learn and teach to work in general!.</p>
               </div>
               <!--Device column-->
@@ -178,8 +178,8 @@
             <div class="row d-flex justify-content-center">
               <!--Grid column-->
               <div class="col-md-9 p-5">
-                <h2 class="text-center text-dark mb-4 pb-2">Vision</h2>
-                <p class="lead text-center dark-grey-text w-responsive mx-auto mb-5">Be the leading study in the development of
+                <h2 class="text-center text-white mb-4 pb-2">Vision</h2>
+                <p class="lead text-center text-white w-responsive mx-auto mb-5">Be the leading study in the development of
                   video games, virtual and augmented reality in Mexico.</p>
               </div>
               <!--Grid column-->
