implement about.html view

--- a/about.html
+++ b/about.html
@@ -157,9 +157,9 @@
       <div class="container-fluid my-5">
 
         <!--Section: Content-->
-        <section id="social" class="elegant-color-dark">
+        <section id="social">
           <!--Card-->
-          <div class="card mb-4">
+          <div class="card mb-4 elegant-color-dark">
 
             <!--Grid row-->
             <div class="row d-flex justify-content-center">
@@ -191,9 +191,9 @@
               <!--Grid column-->
               <div class="col-md-9 p-5 text-center">
                 <!-- Section heading -->
-                <h2 class="text-dark pb-2 mb-4">Our team</h2>
+                <h2 class="text-white pb-2 mb-4">Our team</h2>
                 <!-- Section description -->
-                <p class="lead w-responsive dark-grey-text mx-auto mb-5">Know a little more about us, what we like to do and what we do.</p>
+                <p class="lead w-responsive text-white mx-auto mb-5">Know a little more about us, what we like to do and what we do.</p>
               </div>
               <!--Grid column-->
             </div>
