--- a/about.html
+++ b/about.html
@@ -156,8 +156,8 @@
       <!--About container-->
       <div class="container-fluid my-5">
 
-        <!--Section: Content-->
-        <section id="social">
+        <!--Section: Mision and Vision-->
+        <section>
           <!--Card-->
           <div class="card mb-4 elegant-color-dark">
 
@@ -202,9 +202,9 @@
           </div>
           <!--Card-->
         </section>
-        <!--Section: Content-->
+        <!--Section: Mision and Vision-->
 
-        <!--Container Team-->
+        <!--Container Team Cards-->
         <div class="container my-5">
 
           <!--Section: Team-->
@@ -255,7 +255,7 @@
                         </p>
                         <hr>
                         <!-- Social Icons -->
-                        <ul class="list-inline list-unstyled social-icon text-white">
+                        <ul class="list-inline list-unstyled text-white">
                           <li class="list-inline-item">
                             <a href="https://www.facebook.com/gerdav2926?ref=bookmarks" target="_blank" class="p-2 fa-lg fb-ic text-reset">
                               <i class="fab fa-facebook-f"></i>
@@ -332,7 +332,7 @@
                         </p>
                         <hr>
                         <!-- Social Icons -->
-                        <ul class="list-inline list-unstyled social-icon text-white">
+                        <ul class="list-inline list-unstyled text-white">
                           <li class="list-inline-item">
                             <a href="https://www.facebook.com/robtj090" target="_blank" class="p-2 fa-lg fb-ic text-reset">
                               <i class="fab fa-facebook-f"></i>
@@ -407,7 +407,7 @@
                         </p>
                         <hr>
                         <!-- Social Icons -->
-                        <ul class="list-inline list-unstyled social-icon text-white">
+                        <ul class="list-inline list-unstyled text-white">
                           <li class="list-inline-item">
                             <a href="https://www.instagram.com/ellisroots/" target="_blank" class="p-2 fa-lg ins-ic text-reset">
                               <i class="fab fa-instagram mr-2"></i>elisroots
@@ -475,7 +475,7 @@
                         </p>
                         <hr>
                         <!-- Social Icons -->
-                        <ul class="list-inline list-unstyled social-icon text-white">
+                        <ul class="list-inline list-unstyled text-white">
                           <li class="list-inline-item">
                             <a href="https://www.instagram.com/pildoritakey/" target="_blank" class="p-2 fa-lg ins-ic text-reset">
                               <i class="fab fa-instagram mr-2"></i>pildoritakey
@@ -535,7 +535,7 @@
                         </p>
                         <hr>
                         <!-- Social Icons -->
-                        <ul class="list-inline list-unstyled social-icon text-white">
+                        <ul class="list-inline list-unstyled text-white">
                           <li class="list-inline-item">
                             <a href="https://www.instagram.com/sarabia_design/" target="_blank" class="p-2 fa-lg ins-ic text-reset">
                               <i class="fab fa-instagram mr-2"></i>sarabia_design
@@ -555,24 +555,14 @@
               <!-- Grid column -->
             </div>
             <!-- Grid row -->
-
           </section>
           <!--Section: Team-->
         </div>
-        <!--Container Team-->
-
-
-
-
-
-
-
-
+        <!--Container Team Cards-->
       </div>
       <!--About container-->
     </div>
     <!--Main container-->
-
   </main>
   <!--Main layout-->
 
