--- a/index.html
+++ b/index.html
@@ -154,17 +154,17 @@
     <div class="container">
 
       <!--Grid row-->
-      <div class="container my-5 py-5 z-depth-1 white">
+      <div class="container my-5 py-5 z-depth-1 elegant-color-dark">
         <!--Section: Content-->
-        <section class="px-md-8 mx-md-5 text-center text-lg-left black-text">
+        <section class="px-md-8 mx-md-5 text-center text-lg-left">
 
           <!--Grid row-->
           <div class="row d-flex justify-content-center text-center">
             <!--Grid column-->
             <div class="col-md-9 mb-4 mb-md-0">
-              <h3 class="font-weight-bold">We create FUN games!</h3>
+              <h2 class="font-weight-bold text-white">We create FUN games!</h2>
 
-              <p class="text-muted black-text">SouFUNStudio is a Mexican company that creates fun,
+              <p class="lead text-white mb-4">SouFUNStudio is a Mexican company that creates fun,
                 high-quality video games to grow the industry in Mexico;
                 willing to learn and teach to work in general!.</p>
             </div>
@@ -177,7 +177,7 @@
           <!--Grid row-->
           <div class="row d-flex justify-content-center">
             <!--Grid column-->
-            <div class="col-md-9 mb-4 mb-md-0">
+            <div class="col-md-12 mb-4 mb-md-0">
               <!--Image-->
               <div class="view overlay z-depth-1-half">
                 <img src="https://mdbootstrap.com/img/Photos/Slides/img%20(70).jpg" class="img-fluid" alt="photo">
