implement contact.html view

--- a/contact.html
+++ b/contact.html
@@ -153,11 +153,11 @@
     <!--Main container-->
     <div class="container-fluid">
 
-      <div class="container mt-5">
+      <div class="container mt-5 elegant-color-dark">
 
 
         <!--Section: Content-->
-        <section class="dark-grey-text mb-5">
+        <section class="text-white mb-5">
 
           <!-- Section heading -->
           <h3 class="font-weight-bold text-center mb-4">Contact Us</h3>
@@ -173,36 +173,37 @@
             <div class="col-lg-5 mb-lg-0 pb-lg-3 mb-4">
 
               <!-- Form with header -->
-              <div class="card">
+              <div class="card bg-card wow fadeInRight" data-wow-delay="0.3s">
                 <div class="card-body">
-                  <!-- Header -->
-                  <div class="form-header blue accent-1">
-                    <h3 class="mt-2"><i class="fas fa-envelope"></i> Write to us:</h3>
+                  <!--Header-->
+                  <div class="text-center">
+                    <h3 class="white-text font-weight-bold">
+                      <i class="fa fa-user white-text"></i> Contact:</h3>
+                    <hr class="hr-light">
                   </div>
-                  <p class="dark-grey-text">We'll write rarely, but only the best content.</p>
                   <!-- Body -->
                   <div class="md-form">
-                    <i class="fas fa-user prefix grey-text"></i>
-                    <input type="text" id="form-name" class="form-control">
+                    <i class="fas fa-user prefix white-text"></i>
+                    <input type="text" id="form-name" class="white-text form-control">
                     <label for="form-name">Your name</label>
                   </div>
                   <div class="md-form">
-                    <i class="fas fa-envelope prefix grey-text"></i>
-                    <input type="text" id="form-email" class="form-control">
+                    <i class="fas fa-envelope prefix white-text"></i>
+                    <input type="text" id="form-email" class="white-text form-control">
                     <label for="form-email">Your email</label>
                   </div>
                   <div class="md-form">
-                    <i class="fas fa-tag prefix grey-text"></i>
-                    <input type="text" id="form-Subject" class="form-control">
+                    <i class="fas fa-tag prefix white-text"></i>
+                    <input type="text" id="form-Subject" class="white-text form-control">
                     <label for="form-Subject">Subject</label>
                   </div>
                   <div class="md-form">
-                    <i class="fas fa-pencil-alt prefix grey-text"></i>
-                    <textarea id="form-text" class="form-control md-textarea" rows="3"></textarea>
+                    <i class="fas fa-pencil-alt prefix white-text"></i>
+                    <textarea id="form-text" class="white-text form-control md-textarea" rows="3"></textarea>
                     <label for="form-text">Send message</label>
                   </div>
                   <div class="text-center">
-                    <button class="btn btn-light-blue">Submit</button>
+                    <button class="btn btn-default btn-rounded">Submit</button>
                   </div>
                 </div>
               </div>
@@ -368,6 +369,7 @@
   <script type="text/javascript" src="js/jquery.easing.min.js"></script>
   <!-- Custom scripts (optional) -->
   <script type="text/javascript" src="js/new-age.min.js"></script>
+  <script type="text/javascript" src="js/yanger.js"></script>
 
   <!--Modal: modalCookie-->
   <div class="modal fade bottom cookieModal" id="cookieModal" tabindex="-1" role="dialog" aria-labelledby="cookieModalLabel" aria-hidden="true" data-backdrop="true">
