implement contact.html view

--- a/contact.html
+++ b/contact.html
@@ -160,7 +160,7 @@
         <section class="text-white mb-5">
 
           <!-- Section heading -->
-          <h3 class="font-weight-bold text-center mb-4">Contact Us</h3>
+          <h3 class="font-weight-bold text-center mb-4 pt-5">Contact Us</h3>
           <!-- Section description -->
           <p class="text-center w-responsive mx-auto pb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
             Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam
@@ -203,7 +203,7 @@
                     <label for="form-text">Send message</label>
                   </div>
                   <div class="text-center">
-                    <button class="btn btn-default btn-rounded">Submit</button>
+                    <button class="btn btn-outline-contact btn-rounded">Submit</button>
                   </div>
                 </div>
               </div>
@@ -220,7 +220,7 @@
                 <iframe src="https://maps.google.com/maps?q=Manhatan&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" style="border:0" allowfullscreen></iframe>
               </div>
               <!-- Buttons-->
-              <div class="row text-center">
+              <div class="row text-center bg-info mb-4">
                 <div class="col-md-4">
                   <a class="btn-floating blue accent-1">
                     <i class="fas fa-map-marker-alt"></i>
