implement contact.html view

--- a/contact.html
+++ b/contact.html
@@ -220,7 +220,7 @@
                 <iframe src="https://maps.google.com/maps?q=Manhatan&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" style="border:0" allowfullscreen></iframe>
               </div>
               <!-- Buttons-->
-              <div class="row text-center bg-info mb-4">
+              <div class="row text-center bg-info-contact mb-4">
                 <div class="col-md-4">
                   <a class="btn-floating blue accent-1">
                     <i class="fas fa-map-marker-alt"></i>
